bk_ida/gccida/g0/load_pic_register
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_pic_register/src/i386.c:4375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v0; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_pic_register/src/i386.c:4389:52: error: use of undeclared identifier 'off_77B7F4'
sprintf( pic_label_name, "*.%s%u", ( const char *)&off_77B7F4, 0LL); 
                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/load_pic_register/src/obj/i386.o] Error 1
